# samuTeszt-python

./: .gitignore  pyproject.toml
